# loom-agentic-data-platform

./: .env.example  .gitignore  OVERVIEW.md  README.md  pyproject.toml
data/tasks/: tasks.jsonl
data/tasks/rubrics/: email_to_sheet-002.json  email_to_sheet-003.json  email_to_sheet-004.json
deploy/: README.md  docker-compose.yaml
deploy/k8s/: job-email_to_sheet-000.yaml  job-email_to_sheet-001.yaml
docs/: design.md
examples/sample-run/: judge_variance.json  quality.json  report.html  schedule.json  trace.jsonl
examples/sample-run/dataset/: manifest.json  rl.jsonl  sft.jsonl
examples/sample-run/dataset/bundle/rubrics/: email_to_sheet-000.json  email_to_sheet-001.json  email_to_sheet-002.json  (+2 more)
loom/: __init__.py  cli.py  config.py  pipeline.py
loom/contracts/: __init__.py  models.py
loom/curate/: __init__.py  curator.py
loom/envs/: __init__.py  base.py  browser.py  pool.py  sheet_email.py
loom/envs/webapp/: __init__.py  app.py
loom/envs/webapp/static/: app.css  app.js
loom/envs/webapp/templates/: index.html
loom/obs/: __init__.py  tracing.py
loom/quality/: __init__.py  eval.py  gold.py
loom/rollout/: __init__.py  hooks.py  policy.py  runner.py
loom/schedule/: __init__.py  executor.py  jobs.py  k8s.py  scheduler.py  store.py
loom/tasks/: __init__.py  builtin.py
loom/trace/: __init__.py  report.py  store.py
loom/verify/: __init__.py  checks.py  engine.py  judge.py
tests/: test_browser_env.py  test_curate.py  test_fault_attribution.py  test_obs.py  test_pool.py  test_quality.py  test_report.py  test_schedule.py  test_verify.py
